objects/TM_Treasury_Application_Product_User__c.object
<CustomObject>
    <fields>
        <fullName>TM_Account_Access__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Authorized_to__c</fullName>
        <label>Authorized to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enter/request single wires</fullName>
                </value>
                <value>
                    <fullName>Edit single wires</fullName>
                </value>
                <value>
                    <fullName>Enter/request repetitive wires</fullName>
                </value>
                <value>
                    <fullName>Edit repetitive wires</fullName>
                </value>
                <value>
                    <fullName>Transmit Netteller wires</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Cell_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TM_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TM_Online_Banking_Access__c</fullName>
        <label>Online Banking Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Per_Wire_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Per Wire Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Per_day_limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Per Day limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Treasury_Application_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Application Product</label>
        <referenceTo>TM_Treasury_Application_Product__c</referenceTo>
        <relationshipLabel>Treasury Application Product Users</relationshipLabel>
        <relationshipName>Treasury_Application_Product_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TM_Work_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Treasury Application Product User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Treasury Application Product User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Application Product Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TM_This_Product_User_cant_be_edited</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name == &apos;Treasury Sales Officer&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Review&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Data Input&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Underwriting&apos;</errorConditionFormula>
        <errorMessage>This Treasury Application Product User can’t be edited anymore as it’s at/after Signature Required stage.</errorMessage>
    </validationRules>
</CustomObject>